Adds Response mapping